--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
 }
+body h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
 .main-container {
     min-height: 100vh;
     background-color: rgba(155, 182, 176, 0.2);
