--- a/css/skills.css
+++ b/css/skills.css
@@ -5,7 +5,6 @@
 }
 .skills-container h3 {
     font-size: 72px;
-    margin: 0;
     padding-left: 20px;
 }
 .skills-container .skills {
@@ -21,15 +20,27 @@
     border-radius: 10px;
     padding: 40px 10px 10px 10px;
     text-align: center;
+    transition: margin .5s ease-out;
 }
 .skill-cell h4 {
     font-size: 22px;
     text-transform: uppercase;
+    margin: 8px;
 }
 .skill-cell p {
     font-size: 16px;
+    margin: 8px;
 }
 .skill-cell:hover {
    background-color: #76d9c2;
    color: white;
+   margin-top: 2px;
+}
+.progressBar{
+    display: none;
+    margin: auto;
+}
+
+.skill-cell:hover > .progressBar{
+    display: block;
 }
