--- a/css/contact.css
+++ b/css/contact.css
@@ -14,11 +14,10 @@
     font-size: 70px;
     font-weight: bolder;
 }
-.mail {
-    margin-left: 40px;
-    margin-top: 20px;
+.contact-container .contact {
+    margin: 20px;
 }
-.phone {
-    margin-left: 40px;
-    margin-top: 20px;
+.mail, .phone, .address {
+    padding: 10px;
+    font-size: 20px;
 }
